--- a/NexusClient/Properties/Resources.resx
+++ b/NexusClient/Properties/Resources.resx
@@ -199,4 +199,7 @@
   <data name="tes_logo_full" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tes_logo_full.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LinBiolinum_RB" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LinBiolinum_RB.ttf;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
