--- a/NexusClient/Properties/Resources.resx
+++ b/NexusClient/Properties/Resources.resx
@@ -229,11 +229,13 @@
   <data name="dialog_ok_4_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dialog-ok-43.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-	<data name="application_exit_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-		<value>..\Resources\application-exit-2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-	</data>
-	<data name="help_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="application_exit_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\application-exit-2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="help_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\help-3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-
+  <data name="go_premium" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\go_premium.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
