--- a/NexusClient/Properties/Resources.resx
+++ b/NexusClient/Properties/Resources.resx
@@ -301,4 +301,7 @@
   <data name="update_warning" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\update_warning.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="update_warning_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\update_warning_disabled.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
