--- a/XmlScript/Properties/Resources.resx
+++ b/XmlScript/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="add-file-set" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\add-file-set.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="notFoundJPG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notFoundJPG.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
