--- a/NexusClient/Properties/Resources.resx
+++ b/NexusClient/Properties/Resources.resx
@@ -310,4 +310,10 @@
   <data name="europeanunion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\europeanunion.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="offline_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\offline-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="online_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\online-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
