A new menu item with launcher for various game tools.

--- a/NexusClient/Properties/Resources.resx
+++ b/NexusClient/Properties/Resources.resx
@@ -364,4 +364,7 @@
   <data name="thumbsup" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\thumbsup.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="supported_tools" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\supported_tools.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
