--- a/NexusClient/Properties/Resources.resx
+++ b/NexusClient/Properties/Resources.resx
@@ -373,4 +373,7 @@
   <data name="edit_delete_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit_delete_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="get_missing_info" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\get_missing_info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
