--- a/NexusClient/Properties/Resources.resx
+++ b/NexusClient/Properties/Resources.resx
@@ -376,4 +376,13 @@
   <data name="get_missing_info" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\get_missing_info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="eye_open2_24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\eye_open2_24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="eye_open_24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\eye_open_24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="home_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\home-16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
