+ start adding suppport for linux/wine (the linux fs is case-sensitive) + fix issues with filename/resource casing (linux filename/paths are case-sensitive) + fix issues with some referenced assemblies (System.XML is not the same as System.Xml) + fix issue with a couple of UI resources that had an indexed pixel format   ** in UI/Controls/DetailsButton.cs :: PadImage   ** Graphics.FromImage does not support images with an indexed pixel format,   ** they must be in rgb format + NexusClient -- needs to reference AntlrUtil because it needs the assembly in the output folder + fix issue with HtmlLabel under wine (issues with mshtml) + fix null reference in Skyrim/SkyrimLauncher.cs::SetupCommands()   ** an attempt was made to extract an icon and then call .ToBitmap() without checking      if the icon was null

--- a/DarkSouls/Properties/Resources.resx
+++ b/DarkSouls/Properties/Resources.resx
@@ -119,7 +119,7 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Categories" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\categories.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\Resources\Categories.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="darksouls_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darksouls_logo.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
