--- a/Witcher3/Properties/Resources.resx
+++ b/Witcher3/Properties/Resources.resx
@@ -122,6 +122,6 @@
     <value>..\Resources\Categories.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="Witcher3_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Witcher3_logo.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\witcher3_logo.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
