--- a/Game Modes/Fallout4/Properties/Resources.resx
+++ b/Game Modes/Fallout4/Properties/Resources.resx
@@ -125,6 +125,6 @@
     <value>..\Resources\fallout4_base.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="Fallout4_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Fallout4_logo.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\fallout4_logo.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
