--- a/Game Modes/Fallout4VR/Properties/Resources.resx
+++ b/Game Modes/Fallout4VR/Properties/Resources.resx
@@ -122,9 +122,9 @@
     <value>..\Resources\Categories.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="fallout4_base" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\fallout4VR_base.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+    <value>..\Resources\fallout4vr_base.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="Fallout4VR_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Fallout4VR_logo.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\fallout4vr_logo.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
