--- a/NexusClient/Properties/Resources.resx
+++ b/NexusClient/Properties/Resources.resx
@@ -556,4 +556,7 @@
   <data name="delete-file" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\delete-file.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="obsidianshade_checkmark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\obsidianshade_checkmark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
