--- a/NexusClient/Properties/Resources.resx
+++ b/NexusClient/Properties/Resources.resx
@@ -562,4 +562,10 @@
   <data name="kofi_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\kofi_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SkyrimGOG_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SkyrimGOG_logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SkyrimSE_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SkyrimSE_logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
